# appletree

./: .editorconfig  .gitignore  README.md  bloom.sh  clean.sh  docker-compose.debug.yml  docker-compose.yml  launch.sh  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
apple/: .dockerignore  Dockerfile  README.md  package-lock.json
apple/scripts/: seed.js
apple/src/: collections.ts  dapi.ts  index.ts
apple/src/resources/: tavernarcana.json
docs/: index.md
docs/nb/: ttcg.md
eden/: .dockerignore  Cargo.toml  Dockerfile  README.md
eden/db/: README.md  user_schema.sql
eden/scripts/: db_insert_quotes.py  db_insert_quotes_csv.py
eden/src/: db.rs  lib.rs  main.rs  net.rs  tests.rs  types.rs
scripts/: seed.js
src/: collections.ts  constructors.ts  dapi.ts  index.ts
src/resources/: cards.json
