[package]
name = "eden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.84"
rand = "0.8.5"
chrono = "0.4.22"